Add full-stack frontend for Anonymous Startup Equity Registry
- Created equity-registry-sdk module with React contexts, hooks, and contract controller
- Built Equity Registry page UI with stake registration, verification, and privacy info cards
- Added TanStack Router route for /equity-registry with navigation
- Updated root layout with branded nav (Equity Registry, Registry, Wallet)
- Updated home page with equity-focused branding and cards
- Redirected /counter route to /equity-registry
- Updated workspace dependencies (@eddalabs/equity-registry-contract)
- Added main/exports fields to contract package.json for bundler resolution
- Updated copy-contract-keys script to reference equity-registry-contract folder
- Updated root package.json workspaces and build-production script
- Updated README with full-stack Quick Start and project structure
- Verified: TypeScript compiles cleanly, Vite production build succeeds (exit 0)
- Configured .env with deployed contract address

--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
   "type": "module",
   "workspaces": [
     "counter-cli",
-    "counter-contract",
+    "equity-registry-contract",
     "frontend-vite-react"
   ],
   "scripts": {
     "compact": "turbo run compact",
     "build": "turbo run build",
-    "build-production": "git lfs pull && cd counter-contract && npm run build && cd ../frontend-vite-react && npm run build",    
+    "build-production": "git lfs pull && cd equity-registry-contract && npm run build && cd ../frontend-vite-react && npm run build",
     "setup-standalone": "cd counter-cli && npm run setup-undeployed",
-    "dev:frontend": "cd frontend-vite-react && npm run dev",    
-    "lint": "turbo run lint"     
+    "dev:frontend": "cd frontend-vite-react && npm run dev",
+    "lint": "turbo run lint"
   },
   "engines": {
     "node": ">=18"
