--- a/equity-registry-contract/package.json
+++ b/equity-registry-contract/package.json
@@ -2,6 +2,14 @@
   "name": "@eddalabs/equity-registry-contract",
   "version": "0.1.0",
   "type": "module",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
+    }
+  },
   "scripts": {
     "compile:equity": "compact compile src/equity-registry.compact src/managed/equity-registry",
     "compile:voting": "compact compile src/voting.compact src/managed/voting",
