--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,6 @@ jspm_packages/
 # Frontend build artifacts (copied from contract source during build)
 frontend-vite-react/public/midnight/
 
+# Deployment secrets (contains wallet seed)
+equity-registry-contract/deployment.json
+
